RESOLVED FIXED 132019
REGRESSION: Hitting asserts in new flow thread selection code
https://bugs.webkit.org/show_bug.cgi?id=132019
Summary REGRESSION: Hitting asserts in new flow thread selection code
Dave Hyatt
Reported 2014-04-22 11:55:39 PDT
Hitting asserts in new flow thread selection code because the way it checks for threads is wrong.
Attachments
Patch (1.98 KB, patch)
2014-04-22 11:57 PDT, Dave Hyatt
andersca: review+
Dave Hyatt
Comment 1 2014-04-22 11:57:43 PDT
Dave Hyatt
Comment 2 2014-04-22 12:00:38 PDT
Fixed in r167673.
Note You need to log in before you can comment on or make changes to this bug.