REGRESSION: Hitting asserts in new flow thread selection code. https://bugs.webkit.org/show_bug.cgi?id=132019

Reviewed by Anders Carlsson.

Null checking flowThreadController is not enough. The list of threads
can be null even when the flowThreadController is not. That's why you
use hasRenderNamedFlowThreads. I patched the two bad places in the code
to use hasRenderNamedFlowThreads to stop the crashes.

* rendering/RenderView.cpp:
(WebCore::RenderView::selectionBounds):
(WebCore::RenderView::repaintSelection):



Canonical link: https://commits.webkit.org/150090@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167673 268f45cc-cd09-0410-ab3c-d52691b4dbfc